# simsamples

./: .gitignore  .gitmodules  LICENSE  README.md  colours  main.cpp
01-hello/0-hello/: Makefile  game.cpp
01-hello/0-hello-opengl/: game.cpp
01_hello_sdl/: CMakeLists.txt  README.md
01_hello_sdl/src/: main.cpp
01_hello_sdl_z_wykladu/src/: main.cpp
01hello/: CMakeLists.txt  main.cpp
01hello/src/: main.cpp
02-textures/: game.cpp
02-textures-dynamic/: game.cpp
02_textures/src/: main.cpp
02physics-online-example/: CMakeLists.txt
02physics-online-example/src/: main.cpp
02textures/: CMakeLists.txt
02textures/src/: main.cpp
03-input/: game.cpp
03particles/: CMakeLists.txt
03particles/src/: main.cpp  vid_sdl.cpp
03simplecollisions/src/: main.cpp
04-physics/: Makefile  game.cpp
04inputandnetwork/src/: a_game.cpp  a_game.hpp  main.cpp  net_client.cpp  net_server.hpp  p_particles.cpp  p_particles.hpp  p_structures.cpp  vid_sdl.cpp  vid_sdl.hpp
05-net-physics/: Makefile  game.cpp  net_messages.hpp
05-network/: main.cpp
ToTheRoof/: CMakeLists.txt  default stack size  kwadrat.cpp  plik_z_niczym.txt
ToTheRoof/data/: KwadratZ.png~
ToTheRoof/src/: main.cpp
bullethell/: CMakeLists.txt  README.md
bullethell/src/: main.cpp  main.hpp  vectors.hpp
fullgame/data/: plansza.xcf
fullgame/src/: main.cpp
instrukcja-pracownia/: CMakeLists.txt  INSTRUKCJA.md
lectures-pl/01-hello/: sgd_01.tex
lectures-pl/02-symulacja/: sgd_02.tex
lectures-pl/03-2dengine/: sgd_03.tex
lectures-pl/04-ogl-net/: sgd_04.tex
lectures-pl/05-sound-controller/: sgd_05.tex
lectures-pl/06-network/: Makefile  netgames.tex
older/02_textures/: CMakeLists.txt
older/02_textures/src/: main.cpp
older/bullethell/: README.md
older/fullgame/: README.md
older/sgd_dzienne_w1/: Makefile  README.md  get_assets.sh  h.cpp
previous_examples/03particles/: CMakeLists.txt
previous_examples/03physics/: CMakeLists.txt  configure
previous_examples/04inputandnetwork/: CMakeLists.txt
previous_examples/hello-sound/: Makefile  game.cpp
sgd_dzienne_w1/: Makefile  get_assets.sh  h.cpp
sgd_dzienne_w1/net/: client.cpp  client.h
smgm/: CMakeLists.txt  README.md  getdep.sh  mygame.cpp
(+58 files in other folders)
